[project]
authors = [
    { name = "Daan Debie", email = "daan@dv.email" },
]
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
name = "sm-kitchensink-plugin"
version = "0.1.0"
description = "Kitchensink to show off all the features of slack-machine"
dependencies = [
    "slack-machine>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitchensink_plugin"]
